# AgentTrace

./: README.md  pyproject.toml
agentgym/: __init__.py  __main__.py  cli.py  remediator.py  report.py  sandbox.py  scanner.py  scorer.py
agentgym/attacks/: __init__.py  config_exploit.py  credential_theft.py  evasion.py  persistence.py  prompt_injection.py  sandbox_escape.py
configs/: hardened_defaults.json
